<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="title_activity_dummy">DummyActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="userguide_button">User Guide</string>
    <string name="feedback_button">Feedback</string>
    <string name="faqs_button">FAQs</string>
    <string name="welcome_message">Welcome to the Help Page</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="to">To:</string>
    <string name="sendto">blchatadmin@gmail.com</string>
    <string name="subject">Subject</string>
    <string name="message">Message:</string>
    <string name="sendbutton">Send</string>

    <string name="title_activity_settings_page">SettingsPage</string>

    <string name="title_activity_customize_appearance_page">CustomizeAppearancePage</string>
    <string name="prompt">Pick your theme</string>
    <string name="question">list_of_questions</string>
    <string name="theme_options">Theme Options</string>
    <string name="settings_page">Settings Page</string>
    <string name="customize_appearance">Customize Appearance</string>
    <string name="encryption">Encryption</string>
    <string name="blocked_users">Blocked Users</string>
    <string-array name="themes">
        <item>Theme1</item>
        <item>Theme2</item>
        <item>Theme3</item>
        <item>Theme4</item>
        <item>Theme5</item>
        <item>Theme7</item>
        <item>Theme8</item>
        <item>Theme9</item>
        <item>Theme10</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">No Bluetooth adapter found!</string>
    <string name="attachimage">Attachment</string>
    <string name="camerabutton">Camera</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_update_contacts">UpdateContactsActivity</string>
    <string name="contacts_page">contacts</string>
    //Camera button in Help Page
</resources>
